# cppanalyze

./: .gitignore  CMakeLists.txt  README.rst  run_tests.sh
src/: cppanalyze.cpp  rename_consumer.h
tests/: test.cpp  test.h
tests/templates/: foo.h  tu_1.cpp  tu_2.cpp
